refactor: filter event
