# src/controllers/event.controller.ts
@@ -17,26 +17,41 @@ export default {
   },
   async findAll(req: IReqUser, res: Response) {
     try {
+      const buildQuery = (filter: any) => {
+        let query: FilterQuery<TEvent> = {};
+
+        if (filter.search) query.$text = { $search: filter.search };
+        if (filter.category) query.category = filter.category;
+        if (filter.isOnline) query.isOnline = filter.isOnline;
+        if (filter.isPublish) query.isPublish = filter.isPublish;
+        if (filter.isFeatured) query.isFeatured = filter.isFeatured;
+
+        return query;
+      };
+
       const {
-        limit = 10,
+        limit = 8,
         page = 1,
         search,
-      } = req.query as unknown as IPaginationQuery;
+        category,
+        isOnline,
+        isFeatured,
+        isPublish,
+      } = req.query;
 
-      const query: FilterQuery<TEvent> = {};
-
-      if (search) {
-        Object.assign(query, {
-          ...query,
-          $text: {
-            $search: search,
-          },
-        });
-      }
+      const query = buildQuery({
+        limit,
+        page,
+        search,
+        category,
+        isOnline,
+        isFeatured,
+        isPublish,
+      });
 
       const result = await EventModel.find(query)
-        .limit(limit)
-        .skip((page - 1) * limit)
+        .limit(+limit)
+        .skip((+page - 1) * +limit)
         .sort({ createdAt: -1 })
         .exec();
       const count = await EventModel.countDocuments(query);
@@ -46,8 +61,8 @@ export default {
         result,
         {
           total: count,
-          totalPage: Math.ceil(count / limit),
-          current: page,
+          totalPage: Math.ceil(count / +limit),
+          current: +page,
         },
         "success fetch all events"
       );
